--- a/sportfest.html
+++ b/sportfest.html
@@ -1,13 +1,13 @@
 <html>
  <head> <title> Sportfest1</title>
  <link rel="stylesheet" type="text/css" href="index.css">
- <link rel="stylesheet" href="css/bootstrap.min.css">
+ <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
  </head>
 
 <body id="content">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"> 
+<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"> 
 
 
 $('.carousel').carousel()
@@ -40,21 +40,21 @@ $('.karussell').carousel({
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="sf1.jpg" alt="...">
+      <img src="img/sf1.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
 
     <div class="item">
-      <img src="sf2.jpg" alt="...">
+      <img src="img/sf2.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
 
     <div class="item">
-      <img src="sf3.jpg" alt="...">
+      <img src="img/sf3.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
