--- a/sportfest.html
+++ b/sportfest.html
@@ -7,7 +7,7 @@
 <body id="content">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"> 
+<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"> 
 
 
 $('.carousel').carousel()
@@ -21,7 +21,7 @@ $('.karussell').carousel({
 
 
 <div class="header">
-<a href=""> <img src="htl_logo.png" alt="logo" width="320" height="120"> </a>
+<a href=""> <img src="img/htl_logo.png" alt="logo" width="320" height="120"> </a>
 
 <h1> Sportfest </h1>
 
@@ -40,21 +40,21 @@ $('.karussell').carousel({
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="sf1.jpg" alt="...">
+      <img src="img/sf1.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
 
     <div class="item">
-      <img src="sf2.jpg" alt="...">
+      <img src="img/sf2.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
 
     <div class="item">
-      <img src="sf3.jpg" alt="...">
+      <img src="img/sf3.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
