--- a/sportfest.html
+++ b/sportfest.html
@@ -27,6 +27,8 @@ $('.karussell').carousel({
 
 </div>
 
+<div class="row">
+
 <div class="content">
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -69,26 +71,29 @@ $('.karussell').carousel({
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
 </div>
+</div>
+
+
 
 <div class="row menue menue_unten">
   <div class="col-md-6 link volleyball">
-     <h2> Volleyball </h2>
+     <a href=""><h2>Volleyball </h2></a>
   </div>
 
 
   <div class="col-md-6 link basketball">
-      <h2> Basketball </h2>
+      <a href=""><h2> Basketball </h2></a>
   </div>
 </div>
 
 <div class="row menue menue_oben">
   <div class="col-md-8 link fussball">
-      <h2> Fu&szligball </h2>
+      <a href=""><h2> Fu&szligball </h2></a>
   </div>
 
 
   <div class="col-md-4 link sonstiges">
-      <h2> Sonstiges </h2>
+     <a href=""><h2> Sonstiges </h2> </a>
   </div>
 </div>
 
