--- a/sportfest.html
+++ b/sportfest.html
@@ -20,16 +20,19 @@ $('.karussell').carousel({
 
 </script>
 
-<div class="header">
+<div class="row">
+<div class=" col-md-6 header">
 <a href=""> <img src="img/htl_logo.png" alt="logo" width="320" height="120"> </a>
 
+<div class=" col-md-6 header">
 <h1> Sportfest </h1>
 
 </div>
+</div>
+</div>
 
 <div class="row">
-
-<div class="content">
+<div class="col-md-12 content">
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -72,33 +75,29 @@ $('.karussell').carousel({
   </a>
 </div>
 </div>
-
+</div>
 
 
 <div class="row menue menue_unten">
   <div class="col-md-6 link volleyball">
-     <a href=""><h2>Volleyball </h2></a>
+     <a href="volleyball.html"><h2>Volleyball </h2></a>
   </div>
 
 
   <div class="col-md-6 link basketball">
-      <a href=""><h2> Basketball </h2></a>
+      <a href="basketball.html"><h2> Basketball </h2></a>
   </div>
 </div>
 
 <div class="row menue menue_oben">
   <div class="col-md-8 link fussball">
-      <a href=""><h2> Fu&szligball </h2></a>
+      <a href="fussball.html"><h2> Fu&szligball </h2></a>
   </div>
 
 
   <div class="col-md-4 link sonstiges">
-     <a href=""><h2> Sonstiges </h2> </a>
+     <a href="sonstiges.html"><h2> Sonstiges </h2> </a>
   </div>
-</div>
-
-
-
 </div>
 
 </body>
