--- a/fussball.html
+++ b/fussball.html
@@ -18,18 +18,23 @@ $('.karussell').carousel({
   pause: "hover"
 })
 
+$('#meinModal').modal(Optionen)
+
 </script>
 
-<div class="header">
+<div class="row">
+<div class=" col-md-6 header">
 <a href=""> <img src="img/htl_logo.png" alt="logo" width="320" height="120"> </a>
 
-<h1> Sportfest </h1>
+<div class=" col-md-6 header">
+<h1> Fu&szlig;ball </h1>
 
 </div>
-
+</div>
+</div>
 <div class="row">
 
-<div class="content">
+<div class="col-md-12 content">
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -72,3 +77,86 @@ $('.karussell').carousel({
   </a>
 </div>
 </div>
+</div>
+
+<div class="row images">
+<div class="col-md-4">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball.jpg"></button>
+
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <img src="img/sportfest/fball.jpg">
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="col-md-4">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball1.jpg"></button>
+
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <img src="img/sportfest/fball1.jpg">
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="col-md-4">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball2.jpg"></button>
+
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <img src="img/sportfest/fball2.jpg">
+    </div>
+  </div>
+</div>
+</div>
+
+</div>
+
+<div class="row images">
+<div class="col-md-4">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball3.jpg"></button>
+
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <img src="img/sportfest/fball3.jpg">
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="col-md-4">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball4.jpg"></button>
+
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <img src="img/sportfest/fball4.jpg">
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="col-md-4">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball5.jpg"></button>
+
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <img src="img/sportfest/fball5.jpg">
+    </div>
+  </div>
+</div>
+</div>
+
+</div>
+
+
+</body>
+</html>
