--- a/volleyball.html
+++ b/volleyball.html
@@ -19,17 +19,18 @@ $('.karussell').carousel({
 })
 
 </script>
-
-<div class="header">
+<div class="row">
+<div class=" col-md-6 header">
 <a href=""> <img src="img/htl_logo.png" alt="logo" width="320" height="120"> </a>
 
-<h1> Sportfest </h1>
-
+<div class=" col-md-6 header">
+<h1> Volleyball </h1>
+</div>
+</div>
 </div>
 
 <div class="row">
-
-<div class="content">
+<div class="col-md-12 content">
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -72,3 +73,10 @@ $('.karussell').carousel({
   </a>
 </div>
 </div>
+</div>
+
+</div class="row">
+<a href="gross_bild.jpg" rel="lightbox"><img src="klein_bild.jpg" alt="Kleines Bild"/></a>
+</div>
+</body>
+</html>
