--- a/fussball.html
+++ b/fussball.html
@@ -47,25 +47,47 @@ $('#meinModal').modal(Optionen)
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="img/sf1.jpg" alt="...">
+      <img src="img/sportfest/fball.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
 
     <div class="item">
-      <img src="img/sf2.jpg" alt="...">
+      <img src="img/sportfest/fball1.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
 
     <div class="item">
-      <img src="img/sf3.jpg" alt="...">
+      <img src="img/sportfest/fball2.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
+
+     <div class="item">
+      <img src="img/sportfest/fball3.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+
+     <div class="item">
+      <img src="img/sportfest/fball4.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+
+     <div class="item">
+      <img src="img/sportfest/fball5.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+
   </div>
 
   <!-- Controls -->
@@ -79,83 +101,48 @@ $('#meinModal').modal(Optionen)
 </div>
 </div>
 
-<div class="row images">
-<div class="col-md-4">
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball.jpg"></button>
+<div class="row img">
 
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <img src="img/sportfest/fball.jpg">
-    </div>
+  <div class="col-md-4">
+  <a href='img/sportfest/fball.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/fball.jpg"></a>
+  </div>
+
+  <div class="col-md-4">
+  <a href='img/sportfest/fball1.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/fball1.jpg"></a>
+  </div>
+
+  <div class="col-md-4">
+  <a href='img/sportfest/fball2.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/fball2.jpg"></a>
   </div>
 </div>
-</div>
 
-<div class="col-md-4">
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball1.jpg"></button>
+<div class="row img">
 
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <img src="img/sportfest/fball1.jpg">
-    </div>
+  <div class="col-md-4">
+  <a href='img/sportfest/fball3.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/fball3.jpg"></a>
   </div>
-</div>
-</div>
 
-<div class="col-md-4">
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball2.jpg"></button>
-
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <img src="img/sportfest/fball2.jpg">
-    </div>
+  <div class="col-md-4">
+  <a href='img/sportfest/fball4.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/fball4.jpg"></a>
   </div>
-</div>
-</div>
 
-</div>
-
-<div class="row images">
-<div class="col-md-4">
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball3.jpg"></button>
-
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <img src="img/sportfest/fball3.jpg">
-    </div>
+  <div class="col-md-4">
+  <a href='img/sportfest/fall5.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/fball5.jpg"></a>
   </div>
-</div>
+
 </div>
 
-<div class="col-md-4">
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball4.jpg"></button>
+</div>
+<div class="row header">
+  <ul class="navigation">
+    <a href="sportfest.html"><li>Startseite</li></a>
+    <a href="basketball.html"><li>Basketball</li></a>
+    <a href="fussball.html"><li>Fu&szlig;ball</li></a>
+    <a href="volleyball.html"><li>Volleyball</li></a>
+    <a href="sonstiges.html"><li>Sonstiges</li></a>
+  </ul>
 
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <img src="img/sportfest/fball4.jpg">
-    </div>
   </div>
-</div>
-</div>
-
-<div class="col-md-4">
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="img/sportfest/fball5.jpg"></button>
-
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="meinGroßesModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <img src="img/sportfest/fball5.jpg">
-    </div>
-  </div>
-</div>
-</div>
-
-</div>
 
 
 </body>
