--- a/sonstiges.html
+++ b/sonstiges.html
@@ -23,13 +23,13 @@ $('.karussell').carousel({
 <div class="header">
 <a href=""> <img src="img/htl_logo.png" alt="logo" width="320" height="120"> </a>
 
-<h1> Sportfest </h1>
-
+<h1> Sonstiges </h1>
+<br>
 </div>
 
 <div class="row">
 
-<div class="content">
+<div class="col-md-12 content">
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -42,21 +42,42 @@ $('.karussell').carousel({
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="img/sf1.jpg" alt="...">
+      <img src="img/sportfest/s.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
 
     <div class="item">
-      <img src="img/sf2.jpg" alt="...">
+      <img src="img/sportfest/s1.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
 
-    <div class="item">
-      <img src="img/sf3.jpg" alt="...">
+     <div class="item">
+      <img src="img/sportfest/s2.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+
+     <div class="item">
+      <img src="img/sportfest/s3.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+
+     <div class="item">
+      <img src="img/sportfest/s4.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+
+     <div class="item">
+      <img src="img/sportfest/s5.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
@@ -72,3 +93,48 @@ $('.karussell').carousel({
   </a>
 </div>
 </div>
+</div>
+
+<div class="row img">
+
+  <div class="col-md-4">
+  <a href='img/sportfest/s.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/s.jpg"></a>
+  </div>
+
+  <div class="col-md-4">
+  <a href='img/sportfest/s1.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/s1.jpg"></a>
+  </div>
+
+  <div class="col-md-4">
+  <a href='img/sportfest/s2.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/s2.jpg"></a>
+  </div>
+</div>
+
+<div class="row img">
+
+  <div class="col-md-4">
+  <a href='img/sportfest/s3.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/s3.jpg"></a>
+  </div>
+
+  <div class="col-md-4">
+  <a href='img/sportfest/s4.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/s4.jpg"></a>
+  </div>
+
+  <div class="col-md-4">
+  <a href='img/sportfest/s5.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/s5.jpg"></a>
+  </div>
+
+</div>
+<div class="row header">
+  <ul class="navigation">
+    <a href="sportfest.html"><li>Startseite</li></a>
+    <a href="basketball.html"><li>Basketball</li></a>
+    <a href="fussball.html"><li>Fu&szlig;ball</li></a>
+    <a href="volleyball.html"><li>Volleyball</li></a>
+    <a href="sonstiges.html"><li>Sonstiges</li></a>
+  </ul>
+
+  </div>
+
+</body>
+</html>
