--- a/fussball.html
+++ b/fussball.html
@@ -42,6 +42,9 @@ $('#meinModal').modal(Optionen)
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -127,7 +130,7 @@ $('#meinModal').modal(Optionen)
   </div>
 
   <div class="col-md-4">
-  <a href='img/sportfest/fall5.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/fball5.jpg"></a>
+  <a href='img/sportfest/fball5.jpg' target='_blank;' onclick='location.print();  return false;' onload='window.print()'> <img src="img/sportfest/fball5.jpg"></a>
   </div>
 
 </div>
