--- a/volleyball.html
+++ b/volleyball.html
@@ -18,13 +18,6 @@ $('.karussell').carousel({
   pause: "hover"
 })
 
-function printImage(img)
-{
-imagetoprint=window.open('','newwin');
-imagetoprint.document.write('<body onload="window.print()" >'+
-'<img src="'+img+'"></body>');
-imagetoprint.document.close()
-
 </script>
 <div class="row">
 <div class=" col-md-6 header">
@@ -45,6 +38,9 @@ imagetoprint.document.close()
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
   </ol>
 
   <!-- Wrapper for slides -->
